<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
Copyright (c) 2017 Intel Corporation

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<package format="2">
  <name>movidius_ncs_example</name>
  <version>0.3.0</version>
  <description>The example package</description>
  <author email="xiaojun.huang@intel.com">Xiaojun Huang</author>
  <maintainer email="xiaojun.huang@intel.com">Xiaojun Huang</maintainer>
  <maintainer email="chao1.li@intel.com">Chao Li</maintainer>

  <!-- <url type="website">http://wiki.ros.org/test</url> -->

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>object_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>object_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
